[tool.poetry]
name = "surfaceid"
version = "0.1.0"
description = ""
authors = ["root <undefined>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.0"
seaborn = "^0.11.2"
torch-scatter = "^2.0.9"
adabelief-pytorch = "^0.2.1"
plyfile = "^0.7.4"
biopython = "^1.79"
pymesh = "^1.0.2"
sklearn = "^0.0"
pyaml = "^21.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
